# pytest-coverage-err

./: .gitignore  Dockerfile  pyproject.toml
backend/: application.py  settings.py
backend/api/: __init__.py  asset_router.py
backend/api/schemas/: __init__.py  asset.py  base_schemas.py  page.py
backend/database/: __init__.py  database.py
backend/database/alembic/: env.py
backend/database/models/: __init__.py  asset.py  database_mixins.py
backend/service/: asset_service.py
backend/utils/: cache.py  database_utils.py  enums.py  exceptions.py  json_encoder.py
scripts/: backup_db.sh  coverage.sh  create_db_migration.sh  format.sh  format_lint_test.sh  lint.sh  pre-commit.sh  pre-push.sh  run.sh  run_db_migrations.sh  test.sh
tests/: conftest.py  docker-compose.yml  random_seed.py  schema_generators.py  utils.py
tests/api/: test_03_asset.py
tests/dummies/: asset.py
tests/fixtures/: assets.py
